--- a/_includes/analytics-providers/google-gtag.html
+++ b/_includes/analytics-providers/google-gtag.html
@@ -1,9 +1,9 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVT9HE7HRT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-LVT9HE7HRT', { 'anonymize_ip': {{ site.analytics.google.anonymize_ip | default: false }}});
+  gtag('config', 'G-LVT9HE7HRT');
 </script>
